--- a/views/404.html
+++ b/views/404.html
@@ -15,6 +15,9 @@
             <li class="main-header__item">
               <a href="/add-product">Add Product</a>
             </li>
+            <li class="main-header__item">
+              <a href="/contact">Contact us</a>
+            </li>
           </ul>
         </nav>
       </header>
