--- a/views/add-product.html
+++ b/views/add-product.html
@@ -14,6 +14,9 @@
           <li class="main-header__item">
             <a class="active" href="/add-product">Add Product</a>
           </li>
+          <li class="main-header__item">
+            <a href="/contact">Contact us</a>
+          </li>
         </ul>
       </nav>
     </header>
