--- a/views/contactus.html
+++ b/views/contactus.html
@@ -3,28 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Product</title>
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="/css/contact.css" />
     <link rel="stylesheet" href="/css/main.css"/>
-
   </head>
   <body>
     <header class="main-header">
       <nav class="main-header__nav">
         <ul class="main-header__item-list">
-          <li class="main-header__item"><a class="active" href="/">Shop</a></li>
+          <li class="main-header__item"><a href="/">Shop</a></li>
           <li class="main-header__item">
             <a href="/add-product">Add Product</a>
           </li>
           <li class="main-header__item">
-            <a href="/contact">Contact us</a>
+            <a class="active" href="/contact">Contact us</a>
           </li>
         </ul>
       </nav>
     </header>
 
-    <main>
-      <h1>My Products</h1>
-      <p>List of all the products...</p>
-    </main>
+    <form action="/contact" method="POST">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" /><br /><br />
+
+      <label for="email">Email ID:</label>
+      <input type="email" id="email" name="email" /><br /><br />
+
+      <input type="submit" value="Submit" />
+    </form>
   </body>
 </html>
